# Infortainment_APP

./: CMakeLists.txt  Main.qml  README.md  bluetoothmanager.cpp  main.cpp  mapcontroller.cpp  mapcontroller.h  toolchain-rpi.cmake
Controllers/: bluetoothmanager.h  system.cpp  system.h
ui/BottomBar/: Bottom_Bar.qml
ui/LiftScreen/: Lift_Screen.qml
ui/RightScreen/: Right_Screen.qml
